# ADinsights

./: .dockerignore  .eslint.config.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  eslint.config.js  package-lock.json  package.json  pytest.ini  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: .env.sample  Dockerfile  Dockerfile.scheduler  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/accounts/: admin.py  apps.py  audit.py  authentication.py  dev_admin.py  email.py  hooks.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tenant_context.py  views.py
backend/adapters/: __init__.py  base.py  demo.py  fake.py  google_analytics.py  meta_direct.py  upload.py  warehouse.py
backend/alerts/: __init__.py  apps.py  models.py  notifications.py  serializers.py  services.py  tasks.py  views.py
backend/analytics/: __init__.py  combined_metrics_service.py  dataset_status.py  exporters.py  fx.py  google_ads_serializers.py  google_ads_views.py  meta_serializers.py  meta_views.py  models.py  notifications.py  phase2_serializers.py  phase2_views.py  platform_registry.py  report_layout_views.py  reporting_availability.py  reporting_catalog.py  reporting_delivery.py  reporting_evidence_availability.py  reporting_preview.py  reporting_report_preview.py  reporting_source_health.py  reporting_templates.py  serializers.py  snapshots.py  summaries.py  tasks.py  uploads.py  urls.py  views.py  warehouse_metrics.py  web_views.py
backend/app/: __init__.py  alerts.py  config.py  database.py  llm.py  main.py  models.py  scheduler.py  schemas.py  security.py  worker.py
backend/config/: logging.py
backend/content_ops/: __init__.py  apps.py  assets.py  branding.py  evals.py  exports.py  facebook_graph.py  generation.py  identity_sync.py  image_generation.py  input_brief.py  instagram_graph.py  metering.py  metrics.py  models.py  overlay_service.py  permissions.py  prompt_contract.py  publisher.py  readiness.py  safe_areas.py  scheduler.py  serializers.py  tasks.py  urls.py  views.py
backend/core/: celery.py  cors.py  db_error_responses.py  filters.py  frontend_runtime.py  metrics.py  observability.py  routers.py  serializers.py  settings.py  tasks.py  throttling.py  urls.py  views.py  viewsets.py
backend/docs/: tenant_context_audit.md
backend/fixtures/: dev_seed.json  sample_ingest.csv
backend/health/: __init__.py  views.py
backend/integrations/: admin.py  apps.py  connector_lifecycle_views.py  google_ads_serializers.py  google_ads_views.py  google_analytics_serializers.py  google_oauth.py  meta_graph.py  meta_page_serializers.py  meta_page_views.py  models.py  page_insights_serializers.py  page_insights_views.py  provider_registry.py  serializers.py  tasks.py  views.py
backend/middleware/: __init__.py  tenant.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_accounts_api.py  test_adapter_scope_parity.py  test_admin_management.py  test_airbyte_client.py  test_airbyte_connections_api.py  test_airbyte_orchestration.py  test_airbyte_webhook.py  test_alert_notifications.py  test_alert_pause_resume.py  test_alert_rule_edit.py  test_alerts.py  test_analytics_endpoints.py  test_audit_logs.py  test_auth.py  test_backend_release_preflight_command.py  test_backend_release_smoke_command.py  test_ci_backend_summary_script.py  test_combined_client_id_scoping.py  test_combined_platforms_only.py  test_content_ops_api.py  test_content_ops_asset_library.py  test_content_ops_branding.py  test_content_ops_caption_providers.py  test_content_ops_composer_core.py  test_content_ops_evals.py  test_cors.py  (+78 more)
(+1512 files in other folders)
