[project]
name = "adinsights-backend"
version = "0.1.0"
description = "Django backend for multi-tenant advertising insights"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0.6,<6.0",
  "djangorestframework>=3.15,<4.0",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "django-environ>=0.11,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "celery>=5.3,<6.0",
  "redis>=5.0,<6.0",
  "cryptography>=42.0,<43.0",
  "boto3>=1.34,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-django>=4.8,<5.0",
  "black>=24.4,<25.0",
  "ruff>=0.4,<0.5"
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
