[metadata]
name = adinsights-backend
version = 0.1.0

[options]
package_dir =
    =app
packages = find:
install_requires =
    fastapi>=0.111.0,<1.0
    uvicorn[standard]>=0.29.0,<1.0
    sqlalchemy>=2.0.0,<3.0
    databases[postgresql]>=0.9.0
    pydantic-settings>=2.3.0
    httpx>=0.27.0,<1.0
    apscheduler>=3.10.4,<4.0
python_requires = >=3.11

[options.packages.find]
where = app

[options.extras_require]
dev =
    pytest>=8.2.0
    pytest-asyncio>=0.23.0
