[metadata]
name = adinsights-backend
version = 0.1.0

[options]
packages = find:
install_requires =
    Django>=5.0.6,<6.0
    djangorestframework>=3.15,<4.0
    djangorestframework-simplejwt>=5.3,<6.0
    django-environ>=0.11,<1.0
    psycopg2-binary>=2.9,<3.0
    celery>=5.3,<6.0
    redis>=5.0,<6.0
    sentry-sdk>=1.45,<2.0
    cryptography>=42.0,<45.0
    boto3>=1.34,<2.0
python_requires = >=3.11

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest>=8.2,<9.0
    pytest-django>=4.8,<5.0
    black>=24.4,<27.0
    ruff>=0.4,<0.5
